--- a/index.html
+++ b/index.html
@@ -77,17 +77,15 @@
         <p><strong>Reluvate Technologies</strong> (Full-Stack Intern)<br>
            October 2022 - February 2023</p>
         <ul class="list-disc ml-6">
-            <li>Developed a financial report dashboard for internal users using Google Cloud Platform, Python, Pandas, ReactJS.</li>
+            <li>Developed a Tradingview Chart Application using advanced-charts, Python, Pandas.</li>
             <li>Built a robust data pipeline using Python and Pandas.</li>
         </ul>
     </div>
 
     <div class="section my-6">
         <h2 class="text-2xl font-bold text-yellow-600 border-b-2 border-gray-200 pb-2 mb-4">Projects</h2>
-        <p><strong>Personal Portfolio Website</strong><br>
-           Developed a portfolio website using HTML, CSS, and JavaScript.</p>
-        <p><strong>Bootstrap Portfolio Website</strong><br>
-           Remade the portfolio website using Tailwind.css.</p>
+        <p><strong>Business  Landing Page Website</strong><br>
+           Developed a Landing website using NextJS SSG.</p>
     </div>
 
     <div class="section my-6">
@@ -115,7 +113,7 @@
 
     <div class="section my-6">
         <h2 class="text-2xl font-bold text-teal-600 border-b-2 border-gray-200 pb-2 mb-4">Awards & Achievements</h2>
-        <p><strong>SPAI Hackathon</strong><br>
+        <p><strong>None as of now </strong><br>
            First Runner Up</p>
     </div>
 
