--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 
     <div class="section my-6">
         <h2 class="text-2xl font-bold text-green-600 border-b-2 border-gray-200 pb-2 mb-4">Experience</h2>
-        <p><strong>Reluvate Technologies</strong> (Full-Stack Intern)<br>
-           October 2022 - February 2023</p>
+        <p><strong> Ginie Digital Pvt. Ltd </strong> (Full-Stack Intern)<br>
+           2022 February - 2022 June </p>
         <ul class="list-disc ml-6">
-            <li>Developed a Tradingview Chart Application using advanced-charts, Python, Pandas.</li>
+            <li>Developed a Full Stack for internal users using a Js Framework .</li>
             <li>Built a robust data pipeline using Python and Pandas.</li>
         </ul>
     </div>
@@ -104,7 +104,6 @@
         <h2 class="text-2xl font-bold text-blue-600 border-b-2 border-gray-200 pb-2 mb-4">Interests</h2>
         <ul class="list-disc ml-6">
             <li>Artificial Intelligence</li>
-            <li>Machine Learning</li>
             <li>Web Development</li>
             <li>Sports</li>
             <li>Content Creation</li>
