--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div class="section my-6">
         <p><strong>Contact:</strong> <a href="mailto:parthroyaal@gmail.com" class="text-blue-500 hover:underline">parthroyaal@gmail.com</a></p>
-        <p><strong>GitHub:</strong> <a href="https://github.com/parth-royaal" target="_blank" class="text-blue-500 hover:underline">github.com/parthroyaal</a></p>
+        <p><strong>GitHub:</strong> <a href="https://github.com/parth-royal" target="_blank" class="text-blue-500 hover:underline">github.com/parthroyaal</a></p>
     </div>
 
     <div class="section my-6">
