--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     <div class="section my-6">
         <p><strong>Contact:</strong> <a href="mailto:parthroyaal@gmail.com" class="text-blue-500 hover:underline">parthroyaal@gmail.com</a></p>
         <p><strong>GitHub:</strong> <a href="https://github.com/parth-royal" target="_blank" class="text-blue-500 hover:underline">github.com/parthroyaal</a></p>
+        <p><strong>Linkedin:</strong> <a href="https://www.linkedin.com/in/parth-royal" target="_blank" class="text-blue-500 hover:underline">github.com/parthroyaal</a></p>
+
     </div>
+    
 
     <div class="section my-6">
         <h2 class="text-2xl font-bold text-indigo-600 border-b-2 border-gray-200 pb-2 mb-4">Education</h2>
