--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <p><strong> Ginie Digital Pvt. Ltd </strong> (Full-Stack Intern)<br>
            2022 February - 2022 June </p>
         <ul class="list-disc ml-6">
-            <li>Developed a Full Stack for internal users using a Js Framework .</li>
+            <li>Developed a Full Stack App  for internal users using a Js Framework .</li>
             <li>Built a robust data pipeline using Python and Pandas.</li>
         </ul>
     </div>
